[FIX] Minor Print Alignment issues

--- a/cicon_tech/static/src/css/cicon_tech.css
+++ b/cicon_tech/static/src/css/cicon_tech.css
@@ -1,5 +1,5 @@
 .cicon-head-font{
-    color: orange;
+    color: rgb(85,0,0);
 }
 
 .mt32 {
